--- a/Notebook - Sepultamentos2.ipynb
+++ b/Notebook - Sepultamentos2.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "def insere_data(df,data):\n",
     "    df['Data'] = data\n",
-    "    df['Data'] = pd.to_datetime(df['Data'])\n",
+    "    df['Data'] = pd.to_datetime(df['Data'].astype(str), format='%d-%m-%Y')\n",
     "    \n",
     "    return df\n",
     "\n",
